2008-11-21  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-note-private.h:
	* src/hildon-note.c: (hildon_note_set_property),
	(hildon_note_get_property), (hildon_note_class_init),
	(hildon_note_init), (hildon_note_finalize),
	(hildon_note_new_confirmation_with_icon_name),
	(hildon_note_new_information_with_icon_name):

	No need to mark as deprecated the actual code. Revert
	to avoid missing symbols in widgets using deprecated API.

2008-11-20  Alberto Garcia  <agarcia@igalia.com>

	Based on a patch by Claudio Saavedra (csaavedra@igalia.com)

	* src/hildon-volumebar.h
	* src/hildon-volumebar.c (hildon_volumebar_set_range_insensitive_message)
	(hildon_volumebar_set_range_insensitive_messagef): Mark as deprecated.

	* src/hildon-helper.h
	* src/hildon-helper.c (hildon_helper_set_insensitive_message)
	(hildon_helper_set_insensitive_messagef): Mark as deprecated.

	* examples/Makefile.am:
	Deprecate hildon-insensitive-example

	Fixes: NB#92664 (Deprecate hildon_helper_set_insensitive_message)

2008-11-20  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-pannable-area-buttons-scroll-example.c:
	Make all buttons finger height

2008-11-19  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-touch-selector.c: updated the HildonTouchSelector::changed
	documentation
	* src/hildon-date-selector.c: (_update_day_model): Modified in order to
	update the day model only if it is really required, and to avoid the
	full-reconstruction aproach. Now it only add or remove the required days.

	The purpose of this is avoid superfluous HildonTouchSelector::changed
	signals

	Fixes: NB#92744 (HildonDateSelector emits multiple "changed" singal
	with strange parameters)

2008-11-19  Claudio Saavedra  <csaavedra@igalia.com>

	Patch contributed by Adam Endrodi (adam.endrodi@blumsoft.eu)

	* src/hildon-note.c: (hildon_note_init), (hildon_note_realize): Set properly
	the WINDOW_TYPE property.

	Fixes: NB#92897 (HildonNotes have incorrect WINDOW_TYPE)
